 * Do not overwrite user defined CMAKE_CXX_FLAGS.
 * Fix CMake warnings.
 * Fix spelling mistakes.
 * Non-breaking CMake changes.
 * Make building tools and tests optional.
 * Do not use "static" archive destination.
 * Have CMake decide if builds are static or shared
 * Get rid of the secondary Windows build mechanism
 * Unify build artifacts
 * Fix aarch64 building

NVIDIA Texture Tools version 2.1.2
 * Use ICBC as the main BC1 compressor.
 * Various fixes.

NVIDIA Texture Tools version 2.1.1
 * Various fixes.

NVIDIA Texture Tools version 2.1.0
 * Too many changes to list here.
 * CTX1 CUDA compressor.
 * DXT1n CUDA compressor.
 * Support alpha premultiplication by Charles Nicholson. See issue 30.
 * Improved decompressor tool submitted by Amorilia. See issue 41.
 * Add support for YCoCg color transform. Fixes issue 18.
 * Add support for linear and swizzle transforms. Fixes issue 4.
 * Fix loading of EXR files using OpenEXR.
 * Use FreeImage as primary image loading library. Fixes issue 31. Reverted.
 * Output swizzle codes like AMD's tools.
 * Added support for saving PNGs by Frank Richter. Fixes issue 79 and 80.
 * Added gnome thumbnailer by Frank Richter. Fixes issue 82.
 * Cleanup sources removing files that are not strictly required.

NVIDIA Texture Tools version 2.0.7
 * Output correct exit codes. Fixes issue 92.
 * Fix thread-safety errors. Fixes issue 90.
 * Add SIMD power method. Fixes issue 94.

NVIDIA Texture Tools version 2.0.6
 * Fix dll version checking.
 * Detect CUDA 2.1 and future CUDA versions correctly.
 * Print CUDA detection message in nvcompress.
 * Select the fastest CUDA device.
 * Compile squish with -fPIC. Fixes issue 74.
 * Fix warnings under gcc 4.3.2.
 * Fix nvzoom option typo by Frank Richter. Fixes issue 81.
 * Do not use CUDA to compress small mipmaps. Fixes issue 76.
 * Compute mipmaps of semi-transparent images correctly.
 * Shutdown CUDA properly. Fixes issue 83.
 * Fix pixel format converions. Fixes issue 87.