@@ -1,5 +1,6 @@
 option(BUILD_TESTS "Build tests" ON)
 option(BUILD_TOOLS "Build tools" ON)
+option(USE_CUDA "Use Cuda if available" ON)
 
 INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR} ${CMAKE_CURRENT_BINARY_DIR})
 INCLUDE_DIRECTORIES(${NV_SOURCE_DIR}/extern/poshlib)
@@ -14,19 +15,21 @@ SUBDIRS(bc6h)
 SUBDIRS(bc7)
 
 # CUDA
-FIND_PACKAGE(CUDA)
-IF(CUDA_FOUND)
-    IF(MINGW)
-        MESSAGE(STATUS "Looking for CUDA - not supported on MinGW")
-        UNSET(CUDA_FOUND)
-    ENDIF(MINGW)
+if(USE_CUDA)
+    FIND_PACKAGE(CUDA)
     IF(CUDA_FOUND)
-        SET(HAVE_CUDA ${CUDA_FOUND} CACHE BOOL "Set to TRUE if CUDA is found, FALSE otherwise")
-        MESSAGE(STATUS "Looking for CUDA - found")
+        IF(MINGW)
+            MESSAGE(STATUS "Looking for CUDA - not supported on MinGW")
+            UNSET(CUDA_FOUND)
+        ENDIF(MINGW)
+        IF(CUDA_FOUND)
+            SET(HAVE_CUDA ${CUDA_FOUND} CACHE BOOL "Set to TRUE if CUDA is found, FALSE otherwise")
+            MESSAGE(STATUS "Looking for CUDA - found")
+        ENDIF(CUDA_FOUND)
+    ELSE(CUDA_FOUND)
+        MESSAGE(STATUS "Looking for CUDA - not found")
     ENDIF(CUDA_FOUND)
-ELSE(CUDA_FOUND)
-    MESSAGE(STATUS "Looking for CUDA - not found")
-ENDIF(CUDA_FOUND)
+endif()
 
 # OpenMP
 # INCLUDE(FindOpenMP)
